--- a/_config.yml
+++ b/_config.yml
@@ -54,4 +54,9 @@ plugins:
 
 paginate: 10
 paginate_path: "/blog/page:num/"
-  
+
+# Disqus Comments
+disqus:
+    # Leave shortname blank to disable comments site-wide.
+    # Disable comments for any post by adding `comments: false` to that post's YAML Front Matter.
+    shortname: pwnjack
